--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.14.0",
-    "@next/font": "^13.4.9",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,12 +23,15 @@
     "eslint-plugin-better-styled-components": "^1.1.2",
     "eslint-plugin-styled-components": "^0.0.0",
     "firebase": "^10.0.0",
+    "framer-motion": "^10.12.22",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "sonner": "^0.6.2",
     "styled-components": "^6.0.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.9"
