--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.45.1",
     "sonner": "^0.6.2",
     "styled-components": "^6.0.3",
